test/fail_compilation/json.d
/*
REQUIRED_ARGS: -Xi
TEST_OUTPUT:
---
Error: argument expected for switch '-Xi'
       run `dmd` to print the compiler manual
       run `dmd -man` to open browser on manual
---
*/
